--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description = Generating dense embeddings for proteins using kernel PCA
 long_description = file: README.rst
 
 # URLs associated with PyBEL
-url = https://jira.iais.fraunhofer.de/stash/projects/MEML/repos/protein_vectors
+url = https://github.com/ratvec/ratvec
 
 # Author information
 author = Eduardo Brito
