Add bumpversion info

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,12 @@ deps =
 commands = pytest tests {posargs}
 description = Run tests using py.test.
 
+[testenv:bumpversion]
+commands = bumpversion {posargs}
+skip_install = true
+deps =
+    bumpversion
+
 [testenv:flake8]
 deps =
     flake8
