--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,10 +2,8 @@
 current_version = 0.1.0
 commit = True
 tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+(?P<build>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?
-serialize = 
-	{major}.{minor}.{patch}-{release}+{build}
-	{major}.{minor}.{patch}+{build}
+arse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
+serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
