--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = ratvec
-version = '0.1.1-dev'
+version = '__version__ = '0.1.1''
 description = Generating dense embeddings for proteins using kernel PCA
 long_description = file: README.rst
 
