--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.1
+current_version = 0.1.1-dev
 commit = True
 tag = False
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+(?P<build>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?
@@ -20,6 +20,6 @@ values =
 values = [0-9A-Za-z-]+
 
 [bumpversion:file:setup.cfg]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = version = '{current_version}'
+replace = version = '{new_version}'
 
