Update project metadata
- update tox to have pyroma
- update travis settings
- use version module to store VERSION constant
- update variable names
- add a changelog
- add bumpversion configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,16 @@
 ##########################
 [metadata]
 name = ratvec
-version = '0.1.1'
+version = attr: src.ratvec.version.VERSION
 description = Generating dense embeddings for proteins using kernel PCA
 long_description = file: README.rst
 
-# URLs associated with PyBEL
+# URLs associated with the project
 url = https://github.com/ratvec/ratvec
+download_url = https://github.com/ratvec/ratvec/releases
+project_urls =
+    Bug Tracker = https://github.com/ratvec/ratvec/issues
+    Documentation = https://ratvec.readthedocs.io
 
 # Author information
 author = Eduardo Brito
@@ -35,7 +39,6 @@ classifiers =
 	Topic :: Scientific/Engineering :: Bio-Informatics
 	Topic :: Scientific/Engineering :: Mathematics
     Topic :: Scientific/Engineering :: Artificial Intelligence
-
 keywords =
 	Representation Learning
 	Kernel PCA
