--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@
 envlist =
     # code linters/stylers
     flake8
+    pyroma
+    readme
     # the actual tests
     py
 
@@ -16,12 +18,6 @@ deps =
     pytest
 commands = pytest tests {posargs}
 description = Run tests using py.test.
-
-[testenv:bumpversion]
-commands = bumpversion {posargs}
-skip_install = true
-deps =
-    bumpversion
 
 [testenv:flake8]
 deps =
@@ -34,3 +30,58 @@ deps =
 skip_install = true
 commands = flake8 src/ratvec tests/ --exclude=src/ratvec/legacy
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
+
+[testenv:pyroma]
+deps =
+    pygments
+    pyroma
+skip_install = true
+commands = pyroma --min=10 .
+description = Run the pyroma tool to check the project's package friendliness.
+
+
+[testenv:readme]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
+
+####################
+# Deployment tools #
+####################
+[testenv:bumpversion]
+commands = bumpversion {posargs}
+passenv = HOME
+skip_install = true
+deps = bumpversion
+
+[testenv:build]
+skip_install = true
+deps =
+    wheel
+    setuptools
+commands =
+    python setup.py -q sdist bdist_wheel
+
+[testenv:release]
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing dist/*
+
+[testenv:finish]
+skip_install = true
+passenv = HOME
+deps =
+    {[testenv:release]deps}
+    bumpversion
+commands =
+    bumpversion release
+    {[testenv:release]commands}
+    git push
+    bumpversion patch
+    git push
