--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,38 @@
-sudo: false
+sudo: true
 cache: pip
+
 language: python
-python:
-- 3.6
+python: '3.7'
+dist: xenial
+
 stages:
   - lint
   - docs
   - test
+
 jobs:
   include:
     # lint stage
     - stage: lint
-      env: TOXENV=manifest
-    - env: TOXENV=flake8
-    - env: TOXENV=xenon
-    - env: TOXENV=vulture
+      env: TOXENV=flake8
     - env: TOXENV=pyroma
     # docs stage
     - stage: docs
-      env: TOXENV=doc8
-    - env: TOXENV=readme
-    - env: TOXENV=docs
+      env: TOXENV=readme
     # test stage
     - stage: test
       env: TOXENV=py
+
 matrix:
   allow_failures:
-      - env: TOXENV=flake8
-      - env: TOXENV=xenon
-      - env: TOXENV=vulture
-install:
-- pip install --upgrade pip
-- pip install tox
-- pip install codecov
-- pip install coverage
-script:
-- tox
-after_success:
-- tox -e coverage-report
-- codecov
+    - env: TOXENV=xenon
+    - env: TOXENV=mypy
 
+install:
+  - sh -c 'if [ "$TOXENV" = "py" ]; then pip install tox codecov; else pip install tox; fi'
+
+script:
+  - tox
+
+after_success:
+  - sh -c 'if [ "$TOXENV" = "py" ]; then tox -e coverage-report; codecov; fi'
