Update CHANGELOG.rst and tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ deps =
     pytest
 commands = pytest tests {posargs}
 description = Run tests using py.test.
+whitelist_externals =
+    /usr/bin/git
 
 [testenv:flake8]
 deps =
